Updated README with instructions